--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,17 +24,30 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.2.0
-  path_provider: ^1.6.0
+  path_provider: ^1.6.11
   provider: ^4.1.2
   intl: ^0.16.1
   flutter_slidable: ^0.5.4
   styled_text: ^1.0.1
-  
+  flutter_app_badger: ^1.1.2
+  flutter_local_notifications: ^1.4.4+1
+  flutter_native_splash: ^0.1.9
+  flutter_launcher_icons: ^0.7.5
+  rxdart: ^0.24.1
+  http: ^0.12.1
+
+
+
   path: 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
+flutter_icons:
+  image_path: 'image/icon.png'
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +60,8 @@ dev_dependencies:
 flutter:
   assets:
     - image/all_done.png
+    - image/Rootine_splash.png
+    - image/icon.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
