--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+1
   flutter_native_splash: ^0.1.9
   flutter_launcher_icons: ^0.7.5
+  flutter_datetime_picker: ^1.3.8
   rxdart: ^0.24.1
   http: ^0.12.1
 
