--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite: ^1.2.0
   path_provider: ^1.6.11
   provider: ^4.1.2
@@ -36,8 +38,8 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   rxdart: ^0.24.1
   http: ^0.12.1
-
-
+  shared_preferences: ^0.5.8
+  scoped_model: ^1.0.1
 
   path: 
 
